@@ -1,3 +1,8 @@
-{% set code = config.extra.language | default("en") %}
-{% import "partials/language/" + code + ".html" as lang %}
-{% macro t(key) %}{{ lang.t(key) }}{% endmacro %}
+{% set languages = config.extra.language | default("en") %}
+{% if languages is string %}
+  {% set languages = languages.split(",") | map("trim") %}
+{% endif %}
+{% import "partials/language/" + (languages | first) + ".html" as lang %}
+{% macro t(key) %}{{ {
+  "search.languages": languages | join(", ")
+}[key] or lang.t(key) }}{% endmacro %}
